# FYS4480

./: .gitignore  README.md  answersweek38.tex  pyproject.toml
midterm1/: energy.py  main.tex
midterm1/sections/: a.tex  b.tex  b_new.tex  c.tex  c_new.tex  d.tex  diagram.tex  e.tex  f.tex  g.tex
midterm1/src/: energy.py  get_energy.py  hartree_fock.py  hartree_fock.txt  latex.mplstyle  plotutils.py  test.ipynb  test_new.ipynb  utils.py
midterm2/: SecondMidterm2024.tex  main.tex
midterm2/sections/: 2p2h.tex  2p2h.tikz  a.tex  b.tex  c.tex  d.tex  e.tex  f.tex  f_tmp.tex  g.tex
midterm2/src/: b.py  exact_energy.py  hartree_fock.py  latex.mplstyle  plot_utils.py  rayleigh_s.py  rs.py  states.py  test.ipynb
oral_exam_august/: FCI_states.tex  beamerthemeUiO.sty  main.tex
